                       __        __             _       
                       \ \      / /__ _ __   __| |_   _ 
                        \ \ /\ / / _ \ '_ \ / _` | | | |
                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      http://service-technology.org/wendy


Version 1.4-unreleased
======================

* versions of used programs are collected in `testsuite.log' when running
  `make check'

Version 1.3
===========

* implemented the `receive before send' reduction rule
  (`--receiveBeforeSend'): if the waitstates of a knowledge bubble can be
  resolved by receiving, don't send - this reduction does not preserve all
  strategies, but will return a strategy if one exists

* implemented the `don't send in advance' reduction rule
  (`--waitstatesOnly'): only send a message to a knowledge bubble if it
  immediately resolves a waitstate - this reduction does not preserve all
  strategies, but will return a strategy if one exists

Version 1.2
===========

* implemented new OG file format - the deprecated format can still be used
  with `--fionaFormat' parameter which is implicitly used in case `-t OG' is
  used

* added "watermark" to generated operating guidelines (generator, platform,
  invocation string)

* using a GNU Autoconf's Autotest test suite

* the configure script checks if the Petri Net API was found and only
  compiles the local copy if necessary

Version 1.1
===========

* implemented synchronous communication

* renamed `--showDeadlocks' to `--showWaitstates'

* the list of interface labels are printed when `--verbose' is used

Version 1.0
===========

* initial release of Wendy

* calculates the operating guidelines of a normal open net

* result can be written in Fiona's OG format (with explicit formulae or 2 bit
  representation)


