@@ -14,6 +14,13 @@ option "og" -
   argoptional
   optional
 
+option "sa" -
+  "Service automaton output. If no filename is given, the input filename's suffix is replaced by '.sa'."
+  string
+  typestr="FILENAME"
+  argoptional
+  optional
+
 option "dot" -
   "Graphviz dot output. If no filename is given, the input filename's suffix is replaced by '.dot'."
   string
@@ -58,12 +65,6 @@ option "formula" -
   default="dnf"
   optional
 
-option "lola" -
-  "The LoLA binary that is compiled with the option 'FULL' without reduction techniques. LoLA can be downloaded at http://service-technology.org/lola and compiled using 'make lola-full'."
-  string
-  typestr="PATH"
-  optional
-
 
 section "Toggle optimizations"
 
@@ -96,3 +97,9 @@ option "reportFrequency" -
 option "diagnosis" d
   "Disable some optimizations to allow for diagnosis and debugging."
   flag off
+
+option "lola" -
+  "The LoLA binary that is compiled with the option 'FULL' without reduction techniques. LoLA can be downloaded at http://service-technology.org/lola and compiled using 'make lola-full'."
+  string
+  typestr="PATH"
+  optional
