@@ -1,0 +1,40 @@
+INTERFACE
+  INPUT
+    b;
+  OUTPUT
+    c,
+    e,
+    t;
+
+NODES
+  0 : (!c + !e + !t) : blue,
+  1 : !e : blue,
+  6 : ?b : blue,
+  7 : final : blue : finalnode,
+  15 : true : blue,
+  16 : !e : blue,
+  17 : ?b : blue,
+  18 : (!c + !t) : blue;
+
+INITIALNODE
+  0;
+
+TRANSITIONS
+  0 -> 1 : !c,
+  0 -> 16 : !t,
+  0 -> 18 : !e,
+  0 -> 15 : ?b,
+  1 -> 6 : !e,
+  1 -> 15 : ?b,
+  6 -> 7 : ?b,
+  7 -> 15 : ?b,
+  15 -> 15 : ?b,
+  15 -> 15 : !c,
+  15 -> 15 : !t,
+  15 -> 15 : !e,
+  16 -> 17 : !e,
+  16 -> 15 : ?b,
+  17 -> 7 : ?b,
+  18 -> 6 : !c,
+  18 -> 17 : !t,
+  18 -> 15 : ?b;
