@@ -1,0 +1,60 @@
+{ coffee }
+
+PLACE
+INTERNAL
+  p0,  { initial }
+  p1,		
+  p2,
+  p3,
+  p4;
+INPUT
+  e, 
+  t,
+  c;
+OUTPUT
+  b;
+
+INITIALMARKING
+  p0:	1
+ ;
+
+FINALMARKING
+  p4:	1
+ ;
+
+TRANSITION t1	 { ?e }
+CONSUME
+  p0:	1,
+  e: 1;	 
+PRODUCE
+  p1:	1;
+
+TRANSITION t2	 { ?c }
+CONSUME
+  c:	1,
+  p1: 1;
+PRODUCE
+  p2:	1;
+
+TRANSITION t3	 { ?t }
+CONSUME
+  p1:	1,
+  t : 1;
+PRODUCE
+  p3:	1;
+
+TRANSITION t4	 { !b1 }
+CONSUME
+  p2:	1;
+PRODUCE
+  b:	1,
+  p4 : 1;
+ 
+TRANSITION t5	 { !b2 }
+CONSUME
+  p3:	1;
+PRODUCE
+  b:	1,
+  p4 : 1;
+
+{ END OF FILE }
